Sun Oct 15 22:52:53 2006  Tim Janik  <timj@gtk.org>

	* bseellipticfilter.h, bseellipticfilter.c: renamed from bseiirfilter.*.

Sun Oct 15 22:49:51 2006  Tim Janik  <timj@gtk.org>

	* bseieee754.h: added BSE_DOUBLE_EPSILON and BSE_FLOAT_EPSILON, 
	constants for the round-off error at 1.0.

Sun Oct 15 20:58:57 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* gslfilter.c: Made implementation of gsl_filter_sine_scan() more
	reliable by using two phase shifted signals (see comment in the
	implementation).

Thu Oct 12 22:30:46 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bsedatahandle-resample.cc: Use the newly introduced
	Resampler2::delay().

Thu Oct 12 21:48:54 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseresampler.hh:
	* bseresampler.cc:
	* bseresamplerimpl.hh: Added a virtual function Resampler2::delay(),
	which can be used for compensation of the resampler introduced delay.
	Provide C API wrapper for the function: bse_resampler2_delay().

	* tests/resamplehandle.cc: Test the delay compensation function.
	Fix a buglet in another test (comparing signals needs fabs()).

Thu Oct 12 16:54:42 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* gslfft.h: Improved documentation on FFT normalization.

Thu Oct 12 13:25:38 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* bseiirfilter.c: Added some comments.

Thu Oct 12 02:23:15 2006  Tim Janik  <timj@gtk.org>

	* bseiirfilter.c: enlarged ARRSIZ so order 16 filters can be calculated.
	renamed and reworked print_filter_table() to print the filter table with
	much finer granularity.

Thu Oct 12 02:14:44 2006  Tim Janik  <timj@gtk.org>

	* bseiirfilter.c: more unused section removal. auto-fixed indentation.

Thu Oct 12 02:01:47 2006  Tim Janik  <timj@gtk.org>

	* bseiirfilter.c: streamlined first comment section. got rid of useless
	definitions and preprocessor special cases.

Thu Oct 12 01:50:57 2006  Tim Janik  <timj@gtk.org>

	* bseiirfilter.c: streamlined some comments, fixed includes and 